out/production/minijava-compiler/compiler/parser.output
State 60 conflicts: 1 shift/reduce
State 69 conflicts: 6 shift/reduce
State 88 conflicts: 7 shift/reduce
State 100 conflicts: 5 shift/reduce
State 112 conflicts: 7 shift/reduce
State 119 conflicts: 5 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: MainClass ClassDeclarations

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" "(" "String" "[" "]" "identifier" ")" "{" Statement "}" "}"

    3 ClassDeclarations: %empty
    4                  | ClassDeclarations ClassDeclaration

    5 ClassDeclaration: "class" "identifier" "{" VarsDeclarations MethodDeclarations "}"
    6                 | "class" "identifier" "extends" "identifier" "{" VarsDeclarations MethodDeclarations "}"

    7 VarsDeclarations: %empty
    8                 | VarsDeclarations VarsDeclaration

    9 VarsDeclaration: Type "identifier" ";"

   10 MethodDeclarations: %empty
   11                   | MethodDeclarations MethodDeclaration

   12 MethodDeclaration: "public" Type "identifier" "(" FunctionParams ")" "{" VarsDeclarations Statements "return" Expression ";" "}"

   13 FunctionParams: FunctionParameters
   14               | %empty

   15 FunctionParameters: Type "identifier"
   16                   | Type "identifier" "," FunctionParameters

   17 Type: "int" "[" "]"
   18     | "int"
   19     | "boolean"
   20     | "String"
   21     | "identifier"

   22 Statements: %empty
   23           | Statements Statement

   24 Statement: "{" Statement "}"
   25          | "if" "(" Expression ")" Statement "else" Statement
   26          | "while" "(" Expression ")" Statement
   27          | "System.out.println" "(" Expression ")" ";"
   28          | "identifier" "=" Expression ";"
   29          | "identifier" "[" Expression "]" "=" Expression ";"
   30          | %empty

   31 Expression: Expression Operator Expression
   32           | Expression "[" Expression "]"
   33           | Expression "." "length"
   34           | Expression "." "identifier" "(" MethodVars ")"
   35           | "integer literal"
   36           | "boolean literal"
   37           | "string literal"
   38           | "identifier"
   39           | "this"
   40           | "new" "int" "[" Expression "]"
   41           | "new" "identifier" "(" ")"
   42           | "!" Expression
   43           | "(" Expression ")"

   44 MethodVars: MethodVariables
   45           | %empty

   46 MethodVariables: Expression
   47                | Expression "," MethodVariables

   48 Operator: "&&"
   49         | "<"
   50         | "+"
   51         | "-"
   52         | "*"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "=" (258) 28 29
    "(" (259) 2 12 25 26 27 34 41 43
    ")" (260) 2 12 25 26 27 34 41 43
    "[" (261) 2 17 29 32 40
    "]" (262) 2 17 29 32 40
    "{" (263) 2 5 6 12 24
    "}" (264) 2 5 6 12 24
    ";" (265) 9 12 27 28 29
    "," (266) 16 47
    "&&" (267) 48
    "<" (268) 49
    "+" (269) 50
    "-" (270) 51
    "*" (271) 52
    "." (272) 33 34
    "!" (273) 42
    "class" (274) 2 5 6
    "extends" (275) 6
    "public" (276) 2 12
    "static" (277) 2
    "void" (278) 2
    "main" (279) 2
    "String" (280) 2 20
    "return" (281) 12
    "boolean" (282) 19
    "int" (283) 17 18 40
    "if" (284) 25
    "else" (285) 25
    "while" (286) 26
    "System.out.println" (287) 27
    "length" (288) 33
    "this" (289) 39
    "new" (290) 40 41
    "integer literal" (291) 35
    "string literal" (292) 37
    "boolean literal" (293) 36
    "identifier" (294) 2 5 6 9 12 15 16 21 28 29 34 38 41


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    program (41)
        on left: 1
        on right: 0
    MainClass (42)
        on left: 2
        on right: 1
    ClassDeclarations (43)
        on left: 3 4
        on right: 1 4
    ClassDeclaration (44)
        on left: 5 6
        on right: 4
    VarsDeclarations (45)
        on left: 7 8
        on right: 5 6 8 12
    VarsDeclaration (46)
        on left: 9
        on right: 8
    MethodDeclarations (47)
        on left: 10 11
        on right: 5 6 11
    MethodDeclaration (48)
        on left: 12
        on right: 11
    FunctionParams (49)
        on left: 13 14
        on right: 12
    FunctionParameters (50)
        on left: 15 16
        on right: 13 16
    Type (51)
        on left: 17 18 19 20 21
        on right: 9 12 15 16
    Statements (52)
        on left: 22 23
        on right: 12 23
    Statement (53)
        on left: 24 25 26 27 28 29 30
        on right: 2 23 24 25 26
    Expression (54)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 12 25 26 27 28 29 31 32 33 34 40 42 43 46 47
    MethodVars (55)
        on left: 44 45
        on right: 34
    MethodVariables (56)
        on left: 46 47
        on right: 44 47
    Operator (57)
        on left: 48 49 50 51 52
        on right: 31


State 0

    0 $accept: . program "end of file"

    "class"  shift, and go to state 1

    program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: "class" . "identifier" "{" "public" "static" "void" "main" "(" "String" "[" "]" "identifier" ")" "{" Statement "}" "}"

    "identifier"  shift, and go to state 4


State 2

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 program: MainClass . ClassDeclarations

    $default  reduce using rule 3 (ClassDeclarations)

    ClassDeclarations  go to state 6


State 4

    2 MainClass: "class" "identifier" . "{" "public" "static" "void" "main" "(" "String" "[" "]" "identifier" ")" "{" Statement "}" "}"

    "{"  shift, and go to state 7


State 5

    0 $accept: program "end of file" .

    $default  accept


State 6

    1 program: MainClass ClassDeclarations .
    4 ClassDeclarations: ClassDeclarations . ClassDeclaration

    "class"  shift, and go to state 8

    $default  reduce using rule 1 (program)

    ClassDeclaration  go to state 9


State 7

    2 MainClass: "class" "identifier" "{" . "public" "static" "void" "main" "(" "String" "[" "]" "identifier" ")" "{" Statement "}" "}"

    "public"  shift, and go to state 10


State 8

    5 ClassDeclaration: "class" . "identifier" "{" VarsDeclarations MethodDeclarations "}"
    6                 | "class" . "identifier" "extends" "identifier" "{" VarsDeclarations MethodDeclarations "}"

    "identifier"  shift, and go to state 11


State 9

    4 ClassDeclarations: ClassDeclarations ClassDeclaration .

    $default  reduce using rule 4 (ClassDeclarations)


State 10

    2 MainClass: "class" "identifier" "{" "public" . "static" "void" "main" "(" "String" "[" "]" "identifier" ")" "{" Statement "}" "}"

    "static"  shift, and go to state 12


State 11

    5 ClassDeclaration: "class" "identifier" . "{" VarsDeclarations MethodDeclarations "}"
    6                 | "class" "identifier" . "extends" "identifier" "{" VarsDeclarations MethodDeclarations "}"

    "{"        shift, and go to state 13
    "extends"  shift, and go to state 14


State 12

    2 MainClass: "class" "identifier" "{" "public" "static" . "void" "main" "(" "String" "[" "]" "identifier" ")" "{" Statement "}" "}"

    "void"  shift, and go to state 15


State 13

    5 ClassDeclaration: "class" "identifier" "{" . VarsDeclarations MethodDeclarations "}"

    $default  reduce using rule 7 (VarsDeclarations)

    VarsDeclarations  go to state 16


State 14

    6 ClassDeclaration: "class" "identifier" "extends" . "identifier" "{" VarsDeclarations MethodDeclarations "}"

    "identifier"  shift, and go to state 17


State 15

    2 MainClass: "class" "identifier" "{" "public" "static" "void" . "main" "(" "String" "[" "]" "identifier" ")" "{" Statement "}" "}"

    "main"  shift, and go to state 18


State 16

    5 ClassDeclaration: "class" "identifier" "{" VarsDeclarations . MethodDeclarations "}"
    8 VarsDeclarations: VarsDeclarations . VarsDeclaration

    "String"      shift, and go to state 19
    "boolean"     shift, and go to state 20
    "int"         shift, and go to state 21
    "identifier"  shift, and go to state 22

    $default  reduce using rule 10 (MethodDeclarations)

    VarsDeclaration     go to state 23
    MethodDeclarations  go to state 24
    Type                go to state 25


State 17

    6 ClassDeclaration: "class" "identifier" "extends" "identifier" . "{" VarsDeclarations MethodDeclarations "}"

    "{"  shift, and go to state 26


State 18

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" . "(" "String" "[" "]" "identifier" ")" "{" Statement "}" "}"

    "("  shift, and go to state 27


State 19

   20 Type: "String" .

    $default  reduce using rule 20 (Type)


State 20

   19 Type: "boolean" .

    $default  reduce using rule 19 (Type)


State 21

   17 Type: "int" . "[" "]"
   18     | "int" .

    "["  shift, and go to state 28

    $default  reduce using rule 18 (Type)


State 22

   21 Type: "identifier" .

    $default  reduce using rule 21 (Type)


State 23

    8 VarsDeclarations: VarsDeclarations VarsDeclaration .

    $default  reduce using rule 8 (VarsDeclarations)


State 24

    5 ClassDeclaration: "class" "identifier" "{" VarsDeclarations MethodDeclarations . "}"
   11 MethodDeclarations: MethodDeclarations . MethodDeclaration

    "}"       shift, and go to state 29
    "public"  shift, and go to state 30

    MethodDeclaration  go to state 31


State 25

    9 VarsDeclaration: Type . "identifier" ";"

    "identifier"  shift, and go to state 32


State 26

    6 ClassDeclaration: "class" "identifier" "extends" "identifier" "{" . VarsDeclarations MethodDeclarations "}"

    $default  reduce using rule 7 (VarsDeclarations)

    VarsDeclarations  go to state 33


State 27

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" "(" . "String" "[" "]" "identifier" ")" "{" Statement "}" "}"

    "String"  shift, and go to state 34


State 28

   17 Type: "int" "[" . "]"

    "]"  shift, and go to state 35


State 29

    5 ClassDeclaration: "class" "identifier" "{" VarsDeclarations MethodDeclarations "}" .

    $default  reduce using rule 5 (ClassDeclaration)


State 30

   12 MethodDeclaration: "public" . Type "identifier" "(" FunctionParams ")" "{" VarsDeclarations Statements "return" Expression ";" "}"

    "String"      shift, and go to state 19
    "boolean"     shift, and go to state 20
    "int"         shift, and go to state 21
    "identifier"  shift, and go to state 22

    Type  go to state 36


State 31

   11 MethodDeclarations: MethodDeclarations MethodDeclaration .

    $default  reduce using rule 11 (MethodDeclarations)


State 32

    9 VarsDeclaration: Type "identifier" . ";"

    ";"  shift, and go to state 37


State 33

    6 ClassDeclaration: "class" "identifier" "extends" "identifier" "{" VarsDeclarations . MethodDeclarations "}"
    8 VarsDeclarations: VarsDeclarations . VarsDeclaration

    "String"      shift, and go to state 19
    "boolean"     shift, and go to state 20
    "int"         shift, and go to state 21
    "identifier"  shift, and go to state 22

    $default  reduce using rule 10 (MethodDeclarations)

    VarsDeclaration     go to state 23
    MethodDeclarations  go to state 38
    Type                go to state 25


State 34

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" "(" "String" . "[" "]" "identifier" ")" "{" Statement "}" "}"

    "["  shift, and go to state 39


State 35

   17 Type: "int" "[" "]" .

    $default  reduce using rule 17 (Type)


State 36

   12 MethodDeclaration: "public" Type . "identifier" "(" FunctionParams ")" "{" VarsDeclarations Statements "return" Expression ";" "}"

    "identifier"  shift, and go to state 40


State 37

    9 VarsDeclaration: Type "identifier" ";" .

    $default  reduce using rule 9 (VarsDeclaration)


State 38

    6 ClassDeclaration: "class" "identifier" "extends" "identifier" "{" VarsDeclarations MethodDeclarations . "}"
   11 MethodDeclarations: MethodDeclarations . MethodDeclaration

    "}"       shift, and go to state 41
    "public"  shift, and go to state 30

    MethodDeclaration  go to state 31


State 39

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" "(" "String" "[" . "]" "identifier" ")" "{" Statement "}" "}"

    "]"  shift, and go to state 42


State 40

   12 MethodDeclaration: "public" Type "identifier" . "(" FunctionParams ")" "{" VarsDeclarations Statements "return" Expression ";" "}"

    "("  shift, and go to state 43


State 41

    6 ClassDeclaration: "class" "identifier" "extends" "identifier" "{" VarsDeclarations MethodDeclarations "}" .

    $default  reduce using rule 6 (ClassDeclaration)


State 42

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" "(" "String" "[" "]" . "identifier" ")" "{" Statement "}" "}"

    "identifier"  shift, and go to state 44


State 43

   12 MethodDeclaration: "public" Type "identifier" "(" . FunctionParams ")" "{" VarsDeclarations Statements "return" Expression ";" "}"

    "String"      shift, and go to state 19
    "boolean"     shift, and go to state 20
    "int"         shift, and go to state 21
    "identifier"  shift, and go to state 22

    $default  reduce using rule 14 (FunctionParams)

    FunctionParams      go to state 45
    FunctionParameters  go to state 46
    Type                go to state 47


State 44

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" "(" "String" "[" "]" "identifier" . ")" "{" Statement "}" "}"

    ")"  shift, and go to state 48


State 45

   12 MethodDeclaration: "public" Type "identifier" "(" FunctionParams . ")" "{" VarsDeclarations Statements "return" Expression ";" "}"

    ")"  shift, and go to state 49


State 46

   13 FunctionParams: FunctionParameters .

    $default  reduce using rule 13 (FunctionParams)


State 47

   15 FunctionParameters: Type . "identifier"
   16                   | Type . "identifier" "," FunctionParameters

    "identifier"  shift, and go to state 50


State 48

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" "(" "String" "[" "]" "identifier" ")" . "{" Statement "}" "}"

    "{"  shift, and go to state 51


State 49

   12 MethodDeclaration: "public" Type "identifier" "(" FunctionParams ")" . "{" VarsDeclarations Statements "return" Expression ";" "}"

    "{"  shift, and go to state 52


State 50

   15 FunctionParameters: Type "identifier" .
   16                   | Type "identifier" . "," FunctionParameters

    ","  shift, and go to state 53

    $default  reduce using rule 15 (FunctionParameters)


State 51

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" "(" "String" "[" "]" "identifier" ")" "{" . Statement "}" "}"

    "{"                   shift, and go to state 54
    "if"                  shift, and go to state 55
    "while"               shift, and go to state 56
    "System.out.println"  shift, and go to state 57
    "identifier"          shift, and go to state 58

    $default  reduce using rule 30 (Statement)

    Statement  go to state 59


State 52

   12 MethodDeclaration: "public" Type "identifier" "(" FunctionParams ")" "{" . VarsDeclarations Statements "return" Expression ";" "}"

    $default  reduce using rule 7 (VarsDeclarations)

    VarsDeclarations  go to state 60


State 53

   16 FunctionParameters: Type "identifier" "," . FunctionParameters

    "String"      shift, and go to state 19
    "boolean"     shift, and go to state 20
    "int"         shift, and go to state 21
    "identifier"  shift, and go to state 22

    FunctionParameters  go to state 61
    Type                go to state 47


State 54

   24 Statement: "{" . Statement "}"

    "{"                   shift, and go to state 54
    "if"                  shift, and go to state 55
    "while"               shift, and go to state 56
    "System.out.println"  shift, and go to state 57
    "identifier"          shift, and go to state 58

    $default  reduce using rule 30 (Statement)

    Statement  go to state 62


State 55

   25 Statement: "if" . "(" Expression ")" Statement "else" Statement

    "("  shift, and go to state 63


State 56

   26 Statement: "while" . "(" Expression ")" Statement

    "("  shift, and go to state 64


State 57

   27 Statement: "System.out.println" . "(" Expression ")" ";"

    "("  shift, and go to state 65


State 58

   28 Statement: "identifier" . "=" Expression ";"
   29          | "identifier" . "[" Expression "]" "=" Expression ";"

    "="  shift, and go to state 66
    "["  shift, and go to state 67


State 59

    2 MainClass: "class" "identifier" "{" "public" "static" "void" "main" "(" "String" "[" "]" "identifier" ")" "{" Statement . "}" "}"

    "}"  shift, and go to state 68


State 60
